[package]
name = "region"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "postgres","chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
tracing = "0.1.40"
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
async-recursion="1.1"
termion="4.0"
structopt="0.3"